--- a/views/covidLive.ejs
+++ b/views/covidLive.ejs
@@ -8,6 +8,7 @@
     <div class="row welcome text-center">
       <div class="col-12">
         <h1 class="display-4">COVID UPDATES</h1>
+        <h4><a href="#myChart">Click here to see real time chart!</a></h4>
       </div>
     </div>
   </div>
