create covidintro page and chart file for real time data

--- a/views/countrylive.ejs
+++ b/views/countrylive.ejs
@@ -7,6 +7,7 @@
       <div class="col-12">
         <h1 class="display-4">COVID UPDATES</h1>
         <h4><a href="#myChart">Click here to see real time chart!</a></h4>
+        <h4><a href="/covidLive">Go Back</a></h4>
       </div>
     </div>
   </div>
