--- a/views/covidintro.ejs
+++ b/views/covidintro.ejs
@@ -1,6 +1,6 @@
 <%- include('nav2') %>
 
-<div class="card mb-3">
+<div class="card mb-3 pt-4">
   <div class="row no-gutters">
     <div class="col-md-7">
       <img src="../images/covidintro.png" class="card-img" alt="..." />
@@ -28,10 +28,6 @@
   </div>
 </div>
 
-<div class="card bg-dark text-white">
-  <img src="../images/image9.jpeg" class="card-img detection" alt="..." />
-  <div class="card-img-overlay"></div>
-</div>
 
 <div class="card mb-3">
   <div class="row no-gutters">
@@ -83,7 +79,150 @@
   </div>
 </div>
 
+
+
+
+<div class="containers">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Can Face Masks Protect You from the 2019 Coronavirus? What Types, When and How to Use?</h2>
+    </div>
+  </div>
+</div>
+
+<hr my-4>
 <div class="card mb-3">
+  <div class="row no-gutters">
+    <div class="col-md-5">
+      <img src="../images/samplemask.jpg" class="card-img" alt="..." />
+    </div>
+    <div class="col-md-7">
+      <div class="card-body">
+        <h5 class="card-title">Masks</h5>
+        <p class="card-text">
+          In late 2019, a novel coronavirus emerged in China. Since then, it’s rapidly spread throughout the world. This novel coronavirus is called SARS-CoV-2, and the disease that it causes is called COVID-19.While some with COVID-19 have a mild illness, others may experience difficulty breathing, pneumonia, and even respiratory failure.
+          <br /><br />
+          Older adults and those with underlying health conditions are most at riskTrusted Source for serious illness.
+
+You may have heard a lot recently about using face masks to prevent infection. In fact, one recent study found that Google searches related to face masks spiked in Taiwan following the country’s first imported case.
+        </p>
+        
+        <p>So, are face masks effective, and if so, when should you wear them? Read on to learn the answers to this question and more.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="card-deck p-5">
+  <div class="card">
+    <img src="/images/homemade.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Home made Masks</h5>
+      <p class="card-text">Cloth face masks can be made at home from common materials. They’re better than not using any mask </p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="/images/surgical2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Surgical Masks</h5>
+      <p class="card-text">Surgical masks are disposable, loose-fitting face masks that cover your nose, mouth, and chin.</p>
+    </div>
+   
+  </div>
+  <div class="card">
+    <img src="/images/n95.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">N95 Respirators</h5>
+      <p class="card-text">The respirator itself is generally circular or oval in shape and is designed to form a tight seal to your face.</p>
+    </div>
+    
+  </div>
+</div>
+
+
+<div class="masks p-4">
+  <div class="homemade">
+    <h3>Homemade cloth face masks</h3>
+    <div class="homemadep">
+    <p>To prevent the transmission of the virus from people without symptoms, the Centers for Disease Control and Prevention (CDC) is now recommendingTrusted Source that everyone wears cloth face masks, such as homemade face masksTrusted Source.
+    The recommendation is for when you’re in public places where it’s difficult to maintain a 6-foot distance from others. This recommendation is in addition to continued physical distancing and proper hygiene practices.</p>
+    <h4>Recommemdations include:</h4>
+    <div class="homemadeul">
+    <ul>
+      <li>Wear cloth face masks in public settings, especially in areas of significant community-based transmission, such as grocery stores and pharmacies.</li>
+      <li>Don’t put cloth face masks on children under 2 years old, people who have trouble breathing, people who are unconscious, or people who are unable to remove the mask on their own.</li>
+      <li>Use cloth face masks rather than surgical masks or N95 respirators, as these critical supplies must be reserved for healthcare workers and other medical first responders.</li>
+      <li>Healthcare professionals should exercise extreme caution when using homemade face masks. These masks should preferably be used in combination with a face shield that covers the entire front and sides of the face and extends to the chin or below.</li>
+      <p><b>NOTE: </b>Wash homemade cloth masks after every use. When removing, be careful not to touch your eyes, nose, and mouth. Wash hands immediately after removing.</p>
+    </ul>
+    </div>
+    </div>
+  </div>
+
+  <div class="surgical">
+    <h3>Surgical Masks</h3>
+<div class="surgicalp">
+  <p>Surgical masks are disposable, loose-fitting face masks that cover your nose, mouth, and chin.<br/>They’re typically used to:</p>
+  <div class="surgicalul">
+    <ul>
+      <li>protect the wearer from sprays, splashes, and large-particle droplets</li>
+      <li>prevent the transmission of potentially infectious respiratory secretions from the wearer to others</li>
+    </ul>
+  </div>
+  <p>Surgical masks can vary in design, but the mask itself is often flat and rectangular in shape with pleats or folds. The top of the mask contains a metal strip that can be formed to your nose.</p>
+  <p>Elastic bands or long, straight ties help hold a surgical mask in place while you’re wearing it. These can either be looped behind your ears or tied behind your head.</p>
+</div>
+  </div>
+
+<div class="n95">
+  <h3>N95 Respirators</h3>
+  <div class="N95p">
+    <p>An N95 respirator is a more tight-fitting face mask. In addition to splashes, sprays, and large droplets, this respirator can also filter out 95 percentTrusted Source of very small particles. This includes viruses and bacteria.</p>
+    <p>The respirator itself is generally circular or oval in shape and is designed to form a tight seal to your face. Elastic bands help hold it firmly to your face.</p>
+    <p>N95 respirators aren’t one-size-fits-all. They actually must be fit-tested before use to make sure that a proper seal is formed. If the mask doesn’t seal effectively to your face, you won’t receive the appropriate protection</p>
+    <p>After being fit-tested, users of N95 respirators must continue to perform a seal check each time they put one on.</p>
+    <p>It’s also important to note that a tight seal can’t be achieved in some groups. These include children and people with facial hair</p>
+  </div>
+</div>
+
+</div>
+
+
+<div class="symptoms p-4">
+  <h2>Symptoms of Coronavirus:</h2>
+  <p>People with COVID-19 have had a wide range of symptoms reported – ranging from mild symptoms to severe illness. Symptoms may appear 2-14 days after exposure to the virus. People with these symptoms may have COVID-19:</p>
+  <div class="symptomsul m-4">
+    <ul>
+      <li>Fever or chills</li>
+      <li>Cough</li>
+      <li>Shortness of breath or difficulty breathing</li>
+      <li>Fatigue</li>
+      <li>Muscle or body aches</li>
+      <li>Headache</li>
+      <li>New loss of taste or smell</li>
+      <li>Sore throat</li>
+      <li>Congestion or runny nose</li>
+      <li>Nausea or vomiting</li>
+      <li>Diarrhea</li>
+    </ul>
+  </div>
+  <div class="emergency">
+    <h3>When to seek emergency medical attention</h3>
+    <p>Look for emergency warning signs* for COVID-19. If someone is showing any of these signs, seek emergency medical care immediately:</p>
+    <div class="emergencyul">
+      <ul>
+        <li>Trouble breathing</li>
+        <li>Persistent pain or pressure in the chest</li>
+        <li>New confusion</li>
+        <li>Inability to wake or stay awake</li>
+        <li>Inability to wake or stay awake</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-6">
       <img src="/images/image12.jpeg" class="card-img" alt="..." />
@@ -94,4 +233,8 @@
   </div>
 </div>
 
+<div class="card bg-dark text-white">
+  <img src="../images/image9.jpeg" class="card-img detection" alt="..." />
+  <div class="card-img-overlay"></div>
+</div> -->
 <%- include('footer') %>
