--- a/views/header.ejs
+++ b/views/header.ejs
@@ -52,7 +52,7 @@
             <a class="nav-link" href="#meet-team">Awareness</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/users/saveform">Suggestion</a>
+            <a class="nav-link" href="#suggestionForm">Suggestion</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#detailed">Covid</a>
@@ -61,7 +61,7 @@
             <a class="nav-link" href="#footer-section">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/users/login" target="_blank">Signin</a>
+            <a class="nav-link" href="/users/login">Signin</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/users/register">Register</a>
