--- a/views/home.ejs
+++ b/views/home.ejs
@@ -185,7 +185,7 @@
           <p> The Chief Economic Adviser to the Government of India said that this drop is mainly due to the coronavirus pandemic effect on the Indian economy.</p>
           
           <br />
-          <a href="/gdp" target="_blank"><button class="btn btn-primary">Learn More</button></a>
+          <a href="/gdp"><button class="btn btn-primary">Learn More</button></a>
         </div>
         <div class="col-lg-6">
           <img src="/images/twocolumn2.jpg" class="img-fluid twoColumnImg" />
@@ -271,7 +271,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">WHAT IS COVID?</h5>
-            <p class="card-text">Precautions and Symptoms for COVID</p>
+      
             <a href="/covidintro" class="btn btn-primary">Go in Detail</a>
           </div>
         </div>
@@ -280,10 +280,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">HISTORY OF COVID...</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
+           
             <a href="/history" class="btn btn-primary">Go in Detail</a>
           </div>
         </div>
@@ -295,10 +292,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">LIVE STATUS...</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
+          
             <a href="/covidLive" class="btn btn-primary">Go in Detail</a>
           </div>
         </div>
@@ -307,10 +301,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">HELPLINE NUMBERS...</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
+         
             <a href="/coronvavirushelplinenumber.pdf" class="btn btn-primary">Go in Detail</a>
             <!-- <embed src="/coronvavirushelplinenumber.pdf"   height="700px" width="500"> -->
               <!-- <iframe src="/coronvavirushelplinenumber.pdf" frameborder="0" height="100px"></iframe> -->
