--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -248,7 +248,9 @@ h4 {
 
 /* Two column */
 #two-column {
-  background-color: wheat;
+  /* background-color: wheat; */
+  background-color: #70454e;
+  color: white;
   padding: 5%;
 }
 
@@ -265,8 +267,12 @@ h4 {
 
 #meet-team {
   padding: 7%;
+    /* background-color: #004e7c; */
+  background-color: #5c5f58;
 }
-
+#meet-team h1{
+color: white;
+}
 #meet-team .heros {
   padding-bottom: 3%;
 }
@@ -285,16 +291,25 @@ h4 {
 }
 /* detailed */
 #detailed {
-  background-color: burlywood;
+  /* background-color: burlywood; */
+  background-color: #283747;
+  /* background-color: #004e7c; */
+  /* background-color: #5c5f58; */
   padding: 7%;
 }
-
+#detailed h1{
+  color: white;
+}
 #detailed .cards {
   padding: 0 0 5%;
 }
 
 #detailed .card {
-  background-color: #039be5;
+  /* background-color: #039be5; */
+  /* background-color: rgba(255, 166, 0, 0.849); */
+  /* background-color: rgb(245, 185, 106); */
+  /* background-color: #5c5f58; */
+  background-color: #8d8741;
   margin: 10px;
 }
 
@@ -681,4 +696,35 @@ margin-top: 15px;
 .user .time {
     color: #0c056d;
     font-size: 1.5rem;
+}
+
+
+/* line footer */
+.section-2 {
+  display: flex;
+  justify-content: center;
+  /* background-color: black; */
+  background-color: gray;
+  padding: 30px;
+}
+.section-2 p {
+  font-size: 20px;
+  position: relative;
+  color: #d5d5d5;
+}
+
+/* to create horizontal line */
+.section-2 p::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  position: absolute;
+  right: 0;
+  bottom: -10px;
+  background-color: yellow;
+  transition: all 0.3s;
+}
+.section-2 p:hover::after {
+  width: 100%;
 }
