Add styles in covid intro

--- a/views/covidintro.ejs
+++ b/views/covidintro.ejs
@@ -1,11 +1,12 @@
 <%- include('nav2') %>
 
-<div class="card mb-3 pt-4">
+<section id="first-section">
+<div class="card mb-3 pt-4 border-value">
   <div class="row no-gutters">
-    <div class="col-md-7">
+    <div class="col-md-6">
       <img src="../images/covidintro.png" class="card-img" alt="..." />
     </div>
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="card-body">
         <h5 class="card-title">A Killing Machine</h5>
         <p class="card-text">
@@ -27,9 +28,11 @@
     </div>
   </div>
 </div>
+</section>
 
+<section id="second-section">
 
-<div class="card mb-3">
+<div class="card mb-3 border-value">
   <div class="row no-gutters">
     <div class="col-md-6">
       <img src="/images/prevention1.png" class="card-img" alt="..." />
@@ -78,8 +81,10 @@
     </div>
   </div>
 </div>
+</section>
 
 
+<section id="third-section">
 
 
 <div class="containers">
@@ -91,7 +96,7 @@
 </div>
 
 <hr my-4>
-<div class="card mb-3">
+<div class="card mb-3 border-value">
   <div class="row no-gutters">
     <div class="col-md-5">
       <img src="../images/samplemask.jpg" class="card-img" alt="..." />
@@ -106,12 +111,16 @@
 
 You may have heard a lot recently about using face masks to prevent infection. In fact, one recent study found that Google searches related to face masks spiked in Taiwan following the country’s first imported case.
         </p>
-        
+
         <p>So, are face masks effective, and if so, when should you wear them? Read on to learn the answers to this question and more.</p>
       </div>
     </div>
   </div>
 </div>
+
+</section>
+
+<section id="fourth-section">
 
 
 <div class="card-deck p-5">
@@ -128,7 +137,7 @@ You may have heard a lot recently about using face masks to prevent infection. I
       <h5 class="card-title">Surgical Masks</h5>
       <p class="card-text">Surgical masks are disposable, loose-fitting face masks that cover your nose, mouth, and chin.</p>
     </div>
-   
+
   </div>
   <div class="card">
     <img src="/images/n95.jpg" class="card-img-top" alt="...">
@@ -136,9 +145,12 @@ You may have heard a lot recently about using face masks to prevent infection. I
       <h5 class="card-title">N95 Respirators</h5>
       <p class="card-text">The respirator itself is generally circular or oval in shape and is designed to form a tight seal to your face.</p>
     </div>
-    
+
   </div>
 </div>
+</section>
+
+<section id="fifth-section">
 
 
 <div class="masks p-4">
@@ -147,8 +159,8 @@ You may have heard a lot recently about using face masks to prevent infection. I
     <div class="homemadep">
     <p>To prevent the transmission of the virus from people without symptoms, the Centers for Disease Control and Prevention (CDC) is now recommendingTrusted Source that everyone wears cloth face masks, such as homemade face masksTrusted Source.
     The recommendation is for when you’re in public places where it’s difficult to maintain a 6-foot distance from others. This recommendation is in addition to continued physical distancing and proper hygiene practices.</p>
-    <h4>Recommemdations include:</h4>
-    <div class="homemadeul">
+    <h4 style="color:#0f3057;">Recommemdations include:</h4>
+    <div class="homemadeul homemadep">
     <ul>
       <li>Wear cloth face masks in public settings, especially in areas of significant community-based transmission, such as grocery stores and pharmacies.</li>
       <li>Don’t put cloth face masks on children under 2 years old, people who have trouble breathing, people who are unconscious, or people who are unable to remove the mask on their own.</li>
@@ -162,9 +174,9 @@ You may have heard a lot recently about using face masks to prevent infection. I
 
   <div class="surgical">
     <h3>Surgical Masks</h3>
-<div class="surgicalp">
+<div class="surgicalp homemadep">
   <p>Surgical masks are disposable, loose-fitting face masks that cover your nose, mouth, and chin.<br/>They’re typically used to:</p>
-  <div class="surgicalul">
+  <div class="surgicalul homemadep">
     <ul>
       <li>protect the wearer from sprays, splashes, and large-particle droplets</li>
       <li>prevent the transmission of potentially infectious respiratory secretions from the wearer to others</li>
@@ -177,7 +189,7 @@ You may have heard a lot recently about using face masks to prevent infection. I
 
 <div class="n95">
   <h3>N95 Respirators</h3>
-  <div class="N95p">
+  <div class="N95p homemadep">
     <p>An N95 respirator is a more tight-fitting face mask. In addition to splashes, sprays, and large droplets, this respirator can also filter out 95 percentTrusted Source of very small particles. This includes viruses and bacteria.</p>
     <p>The respirator itself is generally circular or oval in shape and is designed to form a tight seal to your face. Elastic bands help hold it firmly to your face.</p>
     <p>N95 respirators aren’t one-size-fits-all. They actually must be fit-tested before use to make sure that a proper seal is formed. If the mask doesn’t seal effectively to your face, you won’t receive the appropriate protection</p>
@@ -191,8 +203,9 @@ You may have heard a lot recently about using face masks to prevent infection. I
 
 <div class="symptoms p-4">
   <h2>Symptoms of Coronavirus:</h2>
+  <div class="homemadep">
   <p>People with COVID-19 have had a wide range of symptoms reported – ranging from mild symptoms to severe illness. Symptoms may appear 2-14 days after exposure to the virus. People with these symptoms may have COVID-19:</p>
-  <div class="symptomsul m-4">
+  <div class="symptomsul m-4 homemadep">
     <ul>
       <li>Fever or chills</li>
       <li>Cough</li>
@@ -207,10 +220,14 @@ You may have heard a lot recently about using face masks to prevent infection. I
       <li>Diarrhea</li>
     </ul>
   </div>
+
+  </div>
+
   <div class="emergency">
     <h3>When to seek emergency medical attention</h3>
+    <div class="homemadep">
     <p>Look for emergency warning signs* for COVID-19. If someone is showing any of these signs, seek emergency medical care immediately:</p>
-    <div class="emergencyul">
+    <div class="emergencyul homemadep">
       <ul>
         <li>Trouble breathing</li>
         <li>Persistent pain or pressure in the chest</li>
@@ -221,7 +238,8 @@ You may have heard a lot recently about using face masks to prevent infection. I
     </div>
   </div>
 </div>
-
+</div>
+</section>
 <!-- <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-6">
