--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,7 +5,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 <!-- footer of our page -->
-<footer id="footer-section">
+<div class="" style="background-color: #a6f6f1;"">
+
+
+<footer id="footer-section" style="background-color: #fff0f0" >
   <!-- Section 1 -->
   <section class="section-1">
     <div class="member-1">
@@ -24,5 +27,6 @@
     <p style="text-align: center;">Copyright Covid Labs @2020</p>
   </section>
 </footer>
+</div>
 </body>
 </html>
