Add link for chart

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,6 +49,9 @@
         <p id="deaths1"><%= allData.TotalDeaths %></p>
       </div>
     </div>
+    <div class="">
+      <h3 style="text-align: center; margin: 20px;"><a href="/chart">Click here to See Live pie chart ofr Inida and World Status</a></h3>
+    </div>
   </div>
 
 
