--- a/views/covidLive.ejs
+++ b/views/covidLive.ejs
@@ -7,9 +7,9 @@
   <div class="container-fluid">
     <div class="row welcome text-center">
       <div class="col-12">
-        <h1 class="display-4">COVID UPDATES</h1>
-        <h4><a href="/countrylive">Click here to see World Wide Data!</a></h4>
-        <h4><a href="#myChart">Click here to see real time chart!</a></h4>
+        <h1 class="display-4" style="margin: 20px;">COVID UPDATES</h1>
+        <h4 style="margin: 20px;"><a href="/countrylive">Click here to see World Wide Data!</a></h4>
+        <h4 style="margin: 20px;"><a href="#myChart">Click here to see real time chart!</a></h4>
       </div>
     </div>
   </div>
