--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -248,7 +248,7 @@ h4 {
 
 /* Two column */
 #two-column {
-  background-color: #ffc85c;
+  background-color: #fff8c1;
 
   color: #aa3a3a;
   padding: 5%;
@@ -291,9 +291,9 @@ color: white;
 }
 /* detailed */
 #detailed {
-  /* background-color: burlywood; */
-  background-color: #283747;
-  /* background-color: #004e7c; */
+
+
+  background-color: #004e7c;
   /* background-color: #5c5f58; */
   padding: 7%;
 }
@@ -305,11 +305,10 @@ color: white;
 }
 
 #detailed .card {
-  /* background-color: #039be5; */
-  /* background-color: rgba(255, 166, 0, 0.849); */
-  /* background-color: rgb(245, 185, 106); */
-  /* background-color: #5c5f58; */
-  background-color: #8d8741;
+
+  background-color: #bbbfca;
+
+
   margin: 10px;
 }
 
