--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,26 +11,21 @@
 
   <title>Covid-19</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
   <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-   <!-- Font Awesome -->
-   <script
-   src="https://kit.fontawesome.com/996973c893.js"
-   crossorigin="anonymous"
-   ></script>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/996973c893.js" crossorigin="anonymous"></script>
 
-   <!-- Google Fonts -->
-   <link
-   href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&display=swap"
-     rel="stylesheet"
-   />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
 
-   <link rel="stylesheet" href="../css/styles.css" />
-   <!-- Chart.js -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+  <link rel="stylesheet" href="../css/styles.css" />
+  <!-- Chart.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 </head>
 
 <body>
@@ -48,22 +43,22 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#meet-team">Awareness</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#suggestionForm">Suggestion</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#detailed">Covid</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#footer-section">Contact</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/users/login">Signin</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/users/register">Register</a>
           </li>
         </ul>
