--- a/views/home.ejs
+++ b/views/home.ejs
@@ -152,19 +152,19 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body" style="text-align: center;">
             <h5 class="card-title">WHAT IS COVID?</h5>
 
-            <a href="/covidintro" class="btn btn-primary">Go in Detail</a>
+            <a href="/covidintro" class="btn btn-primary">Learn More.....</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body" style="text-align: center;">
             <h5 class="card-title">HISTORY OF COVID...</h5>
 
-            <a href="/history" class="btn btn-primary">Go in Detail</a>
+            <a href="/history" class="btn btn-primary">Learn More.....</a>
           </div>
         </div>
       </div>
@@ -173,19 +173,19 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">LIVE STATUS...</h5>
+          <div class="card-body" style="text-align: center;">
+            <h5 class="card-title">LIVE STATUS COVID STATUS...</h5>
 
-            <a href="/covidLive" class="btn btn-primary">Go in Detail</a>
+            <a href="/covidLive" class="btn btn-primary">Learn More.....</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body" style="text-align: center;">
             <h5 class="card-title">HELPLINE NUMBERS...</h5>
 
-            <a href="/coronvavirushelplinenumber.pdf" class="btn btn-primary">Go in Detail</a>
+            <a href="/coronvavirushelplinenumber.pdf" class="btn btn-primary">Learn More.....</a>
             <!-- <embed src="/coronvavirushelplinenumber.pdf"   height="700px" width="500"> -->
             <!-- <iframe src="/coronvavirushelplinenumber.pdf" frameborder="0" height="100px"></iframe> -->
           </div>
