Add home page link

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -61,6 +61,7 @@
               <h3>Join US</h3>
               <h4>Health and Wellness</h4>
               <input type="button" class="button" value="About Us" />
+              <a href="/home" style=" display: block; color: white; margin-top: 20px; text-decoration: none;"><button type="button" class="button" name="button">Home</button></a>   
             </div>
           </div>
         </div>
