--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -60,8 +60,8 @@
               <img class="signimg" src="../images/circle-cropped.png" alt="" />
               <h3>Join US</h3>
               <h4>Health and Wellness</h4>
-              <input type="button" class="button" value="About Us" />
-              <a href="/home" style=" display: block; color: white; margin-top: 20px; text-decoration: none;"><button type="button" class="button" name="button">Home</button></a>   
+              <input type="button" class="button" style="display: inline-block; width: 90px;" value="About Us" />
+              <a href="/home" style=" display: inline-block; color: white; width: 90px; margin-left: 10px;" text-decoration: none;"><button style="width: 90px;" type="button" class="button" name="button">Home</button></a>
             </div>
           </div>
         </div>
